--- a/cargo.toml
+++ b/cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["James Wong <jameswong1376@gmail.com>"]
 repository = "https://github.com/wl4g/botwaf"
 readme = "README.md"
-license = "MIT"
+license = "GPL-3.0"
 description = "Botwaf - A Mini Open Source AI WAF written in Rust."
 keywords = ["AI", "modsecurity", "security", "waf"]
 edition = "2021"
