--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,7 +39,7 @@
             "env": {
                 "RUST_BACKTRACE": "full",
                 "BOTWAF_CFG_PATH": "${workspaceFolder}/etc/botwaf.yaml",
-                "BOTWAF_CFG_VERBOSE": "true"
+                //"BOTWAF_CFG_VERBOSE": "true"
             },
             "args": [
                 "serve"
