--- a/cargo.toml
+++ b/cargo.toml
@@ -5,7 +5,7 @@ authors = ["James Wong <jameswong1376@gmail.com>"]
 repository = "https://github.com/wl4g/botwaf"
 readme = "README.md"
 license = "GPL-3.0"
-description = "Botwaf - A Mini Open Source AI WAF written in Rust."
+description = "Botwaf - A Mini Open Source AI Bot WAF written in Rust."
 keywords = ["AI", "modsecurity", "security", "waf"]
 edition = "2021"
 
