feat: Added the Verifier & renamed to Updater

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,6 +43,8 @@
             },
             "args": [
                 "serve"
+                // "updater"
+                // "verifier"
             ],
             "cwd": "${workspaceFolder}"
         }
