fix: launch.json & updating & verifing log

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,8 @@
                 //"BOTWAF_CFG_VERBOSE": "true"
             },
             "args": [
-                "serve"
+                "standalone"
+                // "serve"
                 // "updater"
                 // "verifier"
             ],
