--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,5 @@
 # covered by this license must also be released under the GNU GPL license.
 # This includes modifications and derived works.
 
-#BOTWAF__LLM__API_KEY="sk-xxx"
+#BOTWAF__LLM__EMBEDDING__API_KEY="sk-xxx"
+#BOTWAF__LLM__GENERATE__API_KEY="sk-xxx"
