feat: Added the utoipa_swagger_ui & graceful_shutdown based axum tokio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ modsecurity = "0.1.2"
 serde = { version = "1.0.197", features = ["derive"] }
 # Required rustc >= 1.81.0
 validator = { version = "0.18.1", features = ["derive"] }
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["full", "signal"] }
 tokio-cron-scheduler = { version = "0.13.0" }
 tower = "0.5.2"
 config = "0.14.0"
@@ -37,10 +37,14 @@ serde_json = "1.0.140"
 regex = "1.11.1"
 moka = { version = "0.12.10", features = ["sync", "future"] }
 redis = { version = "0.25.4", features = ["tokio-comp", "cluster-async"] }
-sqlx = { version = "0.8.3", features = ["sqlite", "postgres"]}
+sqlx = { version = "0.8.3", features = ["sqlite", "postgres"] }
 openai = "1.0.0"
 langchain-rust = { version = "4.6.0", features = ["sqlite", "postgres"] }
 pgvector = { version = "0.4", features = ["postgres"] }
+openapi = "0.1.5"
+utoipa = "5.3.1"
+utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
+url = "2.5.4"
 
 [build-dependencies]
 chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
