--- a/etc/botwaf.yaml
+++ b/etc/botwaf.yaml
@@ -62,6 +62,28 @@ cache:
     min-retry-wait: 1280
     read-from-replica: true
 
+database:
+  systempg:
+    host: "127.0.0.1"
+    port: 5432
+    database: "botwaf_sys"
+    schema: "public"
+    user: "postgres"
+    password: "changeit"
+    min-connections: 1
+    max-connections: 10
+    use-ssl: false
+  pgvector:
+    host: "127.0.0.1"
+    port: 5432
+    database: "botwaf_vecdb"
+    schema: "public"
+    user: "postgres"
+    password: "changeit"
+    min-connections: 1
+    max-connections: 10
+    use-ssl: false
+
 botwaf:
   # Blocked response status code when ModSecurity engine forbidded. If not set, the modsec matched status code.
   # Notice: Nginx support status code range: 300-599.
