--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,7 @@
         "editor.defaultFormatter": "statiolake.vscode-rustfmt",
         "editor.formatOnSave": true
     },
+    "rust-analyzer.server.extraEnv": {
+        "SWAGGER_UI_DOWNLOAD_URL": "file:${workspaceFolder}/etc/swagger-ui-5.17.14.zip"
+    }
 }
