feat: Refactored the All Run entrypoint commands

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -17,6 +17,7 @@ botwaf-utils.workspace = true
 
 # Thirdparty dependencies.
 clap.workspace = true
+anyhow.workspace = true
 serde_json.workspace = true
 serde_yaml.workspace = true
 mimalloc.workspace = true
