fix: Improved the multi module bootstraper

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,8 +42,8 @@
                 //"BOTWAF_CFG_VERBOSE": "true"
             },
             "args": [
-                // "standalone"
-                "server"
+                "standalone"
+                // "server"
                 // "updater"
                 // "verifier"
             ],
