--- a/src/utils/Cargo.toml
+++ b/src/utils/Cargo.toml
@@ -28,6 +28,7 @@ reqwest.workspace = true
 sysinfo.workspace = true
 hex.workspace = true
 base64.workspace = true
+regex.workspace = true
 # serde-wasm-bindgen.workspace = true
 # wasm-bindgen.workspace = true
 local-ip-address.workspace = true
