--- a/Cargo.toml
+++ b/Cargo.toml
@@ -138,6 +138,7 @@ jsonwebtoken = "9.3.0"
 openssl = "0.10.64"
 rsa = "0.9.6"
 sha2 = "0.10.8"
+ring = "0.17.14"
 
 # Cache libs
 moka = { version = "0.12.10", features = ["sync", "future"] }
