--- a/src/utils/Cargo.toml
+++ b/src/utils/Cargo.toml
@@ -11,7 +11,6 @@ workspace = true
 # Thirdparty dependencies.
 serde.workspace = true
 serde_json.workspace = true
-openssl.workspace = true
 chrono.workspace = true
 axum.workspace = true
 tokio.workspace = true
@@ -25,6 +24,10 @@ openidconnect.workspace = true
 jsonwebtoken.workspace = true
 url.workspace = true
 reqwest.workspace = true
+openssl.workspace = true
+rsa.workspace = true
+sha2.workspace = true
+ring.workspace = true
 sysinfo.workspace = true
 hex.workspace = true
 base64.workspace = true
