--- a/src/common/telemetry/Cargo.toml
+++ b/src/common/telemetry/Cargo.toml
@@ -29,11 +29,13 @@ prometheus.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+humantime.workspace = true
+humantime-serde.workspace = true
 # Inter-Process APM Libraries.
 pyroscope = { version = "0.5.7", optional = true }
 pyroscope_pprofrs = { version = "0.2.7", optional = true }
 
 [features]
-tokio-console = ["console-subscriber", "tokio/tracing"]
 deadlock_detection = ["parking_lot/deadlock_detection"]
-profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
+profiling-tokio-console = ["console-subscriber", "tokio/tracing"]
+profiling-pyroscope = ["dep:pyroscope", "dep:pyroscope_pprofrs"]
