feat: Added the dyn_log

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -9,6 +9,7 @@ workspace = true
 
 [dependencies]
 # Other modules dependencies.
+common-error = { workspace = true }
 common-mem-prof = { workspace = true, optional = true }
 common-pprof = { workspace = true, optional = true }
 common-telemetry.workspace = true
