--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,10 +26,12 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "[api] [no-deps: tokio-console,profiling] default config",
+            "name": "[standalone] profiling & default config",
             "cargo": {
                 "args": [
                     "build",
+                    "--features",
+                    "deadlock_detection,profiling-mem-prof,profiling-pprof,profiling-tokio-console,profiling-pyroscope"
                 ],
                 "filter": {
                     "name": "botwaf",
@@ -37,15 +39,13 @@
                 },
             },
             "env": {
+                "MALLOC_CONF": "prof:true,lg_prof_interval:28", // Set the stack trace sampling interval of jemalloc to bytes, e.g. 28 about is 256 MB
                 "RUST_BACKTRACE": "full",
                 "BOTWAF_CFG_PATH": "${workspaceFolder}/etc/botwaf.yaml",
                 //"BOTWAF_CFG_VERBOSE": "true"
             },
             "args": [
-                "standalone"
-                // "server"
-                // "updater"
-                // "verifier"
+                "standalone" // server|updater|verifier
             ],
             "cwd": "${workspaceFolder}"
         }
