--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ base64 = "0.22.1"
 hex = "0.4.3"
 snafu = "0.8.5"
 strum = { version = "0.25", features = ["derive"] }
-mimalloc = "0.1.43"
+#mimalloc = "0.1.43"
 local-ip-address = "0.6.1"
 lazy_static = "1.4.0"
 mac_address = "1.1.7"
