--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ authors = ["James Wong <jameswong1376@gmail.com>"]
 repository = "https://github.com/wl4g/botwaf"
 readme = "README.md"
 license = "GPL-3.0"
-description = "Botwaf - A Mini Open Source AI Bot WAF written in Rust."
+description = "Botwaf - A Mini Open Source AI-driven Bot WAF written in Rust."
 keywords = ["AI", "Modsecurity", "Security", "WAF"]
 edition = "2021"
 
