fix: Unified used the common_telemetry log

--- a/src/server/Cargo.toml
+++ b/src/server/Cargo.toml
@@ -9,7 +9,8 @@ workspace = true
 
 [dependencies]
 # Other modules dependencies.
-common-audit-log = { workspace = true }
+common-audit-log.workspace = true
+common-telemetry.workspace = true
 botwaf-types.workspace = true
 botwaf-utils.workspace = true
 
