--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,8 +41,9 @@
             "env": {
                 "MALLOC_CONF": "prof:true,lg_prof_interval:28", // Set the stack trace sampling interval of jemalloc to bytes, e.g. 28 about is 256 MB
                 "RUST_BACKTRACE": "full",
-                "BOTWAF_CFG_PATH": "${workspaceFolder}/etc/botwaf.yaml",
                 //"BOTWAF_CFG_VERBOSE": "true"
+                "BOTWAF_CFG_PATH": "${workspaceFolder}/etc/botwaf.yaml",
+                "BOTWAF__SERVICES__UPDATERS[0]__CRON": "9 * * * * *",
             },
             "args": [
                 "standalone" // server|updater|verifier
